fix bugs identified by tc